[package]
name = "game"
version = "0.1.0"
authors = ["Squeeshy123 <62818641+Squeeshy123@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.5", features = ["bundled", "static-link"] }

gl_generator = "0.14.0"
gl = "0.14.0"

